--- a/index.ipynb
+++ b/index.ipynb
@@ -322,7 +322,8 @@
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    bool(tru)"
+    "    bool(true):\n",
+    "        restaurant"
    ]
   },
   {
