Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,7 @@
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    bool(true):\n",
-    "        restaurant"
+    "        restaurant['rating'] > "
    ]
   },
   {
