Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,13 +317,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-14-3dac47ac48f8>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-3dac47ac48f8>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    bool(true):\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    bool(true):\n",
-    "        restaurant['rating'] > alternative['rating']"
+    "        restaurant['rating'] > alternative['rating']\n",
+    "    return false"
    ]
   },
   {
