--- a/index.ipynb
+++ b/index.ipynb
@@ -331,8 +331,8 @@
    ],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    if :\n",
-    "        restaurant['rating'] > alternative['rating']\n",
+    "    if restaurant['rating'] > alternative['rating']:\n",
+    "        \n",
     "    return false"
    ]
   },
