--- a/index.ipynb
+++ b/index.ipynb
@@ -323,8 +323,8 @@
    "source": [
     "def is_better(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        return rue\n",
-    "    return false"
+    "        return 'True'\n",
+    "    return False'"
    ]
   },
   {
